Felx-end sur les prix pour les aligner correctement

--- a/styles/base/_mixins.scss
+++ b/styles/base/_mixins.scss
@@ -3,3 +3,9 @@
     flex-direction: column;
     align-items: flex-start;
 }
+
+@mixin pagesetting2 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
