--- a/styles/pages/_delice-papilles.scss
+++ b/styles/pages/_delice-papilles.scss
@@ -56,5 +56,5 @@
 }
 
 .price--dp {
-    @include pagesetting;
+    @include pagesetting2;
 }
