--- a/styles/pages/_note-enchantee.scss
+++ b/styles/pages/_note-enchantee.scss
@@ -46,7 +46,7 @@
 }
 
 .price--ne {
-    @include pagesetting;
+    @include pagesetting2;
     font-weight: bold;
 }
 
