--- a/styles/pages/_palette-gout.scss
+++ b/styles/pages/_palette-gout.scss
@@ -45,7 +45,7 @@
 }
 
 .price--pg {
-    @include pagesetting;
+    @include pagesetting2;
 }
 
 .foodprice--2 {
